--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,63 @@
   year={2007}
 }
 
+@article{benet2014ipfs,
+  title={Ipfs-content addressed, versioned, p2p file system},
+  author={Benet, Juan},
+  journal={arXiv preprint arXiv:1407.3561},
+  year={2014}
+}
+
+@inproceedings{CCURL,
+	Author    = {Littauer, Richard and Paterson, Hugh},
+	Title     = {Open Source Code Serving Endangered Languages},
+	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
+  Editor    = {C. Soria, L. Pretorius, T. Declerck, J. Mariani, K. Scannell, Eveline Wandl-Vogt},
+  Address   = {Portorož, Slovenia},
+	Year      = {2012}
+}
+
+@incollection{chiarcos2013building,
+  title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
+  author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo and Nordhoff, Sebastian and Littauer, Richard},
+  booktitle={The People’s Web Meets NLP},
+  pages={315--348},
+  year={2013},
+  publisher={Springer}
+}
+
+@inproceedings{chiarcos2012open,
+  title={The Open Linguistics Working Group.},
+  author={Chiarcos, Christian and Hellmann, Sebastian and Nordhoff, Sebastian and Moran, Steven and Littauer, Richard and Eckle-Kohler, Judith and Gurevych, Iryna and Hartmann, Silvana and Matuschek, Michael and Meyer, Christian M},
+  booktitle={LREC},
+  pages={3603--3610},
+  year={2012}
+}
+
+@inproceedings{bird2006nltk,
+  title={NLTK: the natural language toolkit},
+  author={Bird, Steven},
+  booktitle={Proceedings of the COLING/ACL on Interactive presentation sessions},
+  pages={69--72},
+  year={2006},
+  organization={Association for Computational Linguistics}
+}
+
+@article{yang2017toward,
+  title={Toward a linguistically realistic assessment of language vitality: The case of Jejueo},
+  author={Yang, Changyong and O'Grady, William and Yang, Sejung},
+  year={2017},
+  publisher={University of Hawaii Press}
+}
+
+@article{krauwer2003basic,
+  title={The basic language resource kit (BLARK) as the first milestone for the language resources roadmap},
+  author={Krauwer, Steven},
+  journal={Proceedings of SPECOM 2003},
+  pages={8--15},
+  year={2003}
+}
+
 @inproceedings{Lewis:2011:CMD:2132960.2133030,
  author = {Lewis, William D. and Munro, Robert and Vogel, Stephan},
  title = {Crisis MT: Developing a Cookbook for MT in Crisis Situations},
