--- a/thesis.tex
+++ b/thesis.tex
@@ -77,7 +77,7 @@
 
 \noindent\textbf{Acknowledgements}
 
-\noindent Jonathan Poitz provided formatting files, but did not advise on the content. This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2014 in Slovenia. Hugh Paterson III was a coauthor on that paper.
+\noindent Jonathan Poitz provided formatting files, but did not advise on the content. This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2014 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper.
 
 \vspace{1cm}
 
