Fix bibtex issues, closes #25

--- a/references.bib
+++ b/references.bib
@@ -5,7 +5,7 @@
 }
 
 @article{benet2014ipfs,
-  title={Ipfs-content addressed, versioned, p2p file system},
+  title={{IPFS}-content addressed, versioned, p2p file system},
   author={Benet, Juan},
   journal={arXiv preprint arXiv:1407.3561},
   year={2014}
@@ -15,15 +15,15 @@
 	Author    = {Littauer, Richard and Paterson, Hugh},
 	Title     = {Open Source Code Serving Endangered Languages},
 	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
-  Editor    = {C. Soria, L. Pretorius, T. Declerck, J. Mariani, K. Scannell, Eveline Wandl-Vogt},
-  Address   = {Portorož, Slovenia},
+  Editor    = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+  Address   = {Portoroz, Slovenia},
 	Year      = {2012}
 }
 
 @incollection{chiarcos2013building,
   title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
   author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo and Nordhoff, Sebastian and Littauer, Richard},
-  booktitle={The People’s Web Meets NLP},
+  booktitle={The People's Web Meets NLP},
   pages={315--348},
   year={2013},
   publisher={Springer}
@@ -38,7 +38,7 @@
 }
 
 @inproceedings{bird2006nltk,
-  title={NLTK: the natural language toolkit},
+  title={{NLTK}: the natural language toolkit},
   author={Bird, Steven},
   booktitle={Proceedings of the COLING/ACL on Interactive presentation sessions},
   pages={69--72},
@@ -46,15 +46,20 @@
   organization={Association for Computational Linguistics}
 }
 
+// Note: Adding a {} around an word in a title will enforce its capitalization
+
 @article{yang2017toward,
-  title={Toward a linguistically realistic assessment of language vitality: The case of Jejueo},
+  title={Toward a linguistically realistic assessment of language vitality: The case of {Jejueo}},
   author={Yang, Changyong and O'Grady, William and Yang, Sejung},
   year={2017},
+  journal={Language Documentation and Conservation},
+  volumte={11},
+  pages={103-113},
   publisher={University of Hawaii Press}
 }
 
 @article{krauwer2003basic,
-  title={The basic language resource kit (BLARK) as the first milestone for the language resources roadmap},
+  title={The basic language resource kit ({BLARK}) as the first milestone for the language resources roadmap},
   author={Krauwer, Steven},
   journal={Proceedings of SPECOM 2003},
   pages={8--15},
@@ -63,7 +68,7 @@
 
 @inproceedings{Lewis:2011:CMD:2132960.2133030,
  author = {Lewis, William D. and Munro, Robert and Vogel, Stephan},
- title = {Crisis MT: Developing a Cookbook for MT in Crisis Situations},
+ title = {Crisis {MT}: Developing a Cookbook for {MT} in Crisis Situations},
  booktitle = {Proceedings of the Sixth Workshop on Statistical Machine Translation},
  series = {WMT '11},
  year = {2011},
@@ -77,17 +82,15 @@
  address = {Stroudsburg, PA, USA},
 }
 
-@inbook{grenoble_2011,
-  place={Cambridge},
-  series={Cambridge Handbooks in Language and Linguistics},
-  title={Language ecology and endangerment},
-  DOI={10.1017/CBO9780511975981.002},
-  booktitle={The Cambridge Handbook of Endangered Languages},
-  publisher={Cambridge University Press},
-  author={Grenoble, Lenore A.},
-  editor={Austin, Peter K. and Sallabank, JuliaEditors}, year={2011},
-  pages={27-44},
-  collection={Cambridge Handbooks in Language and Linguistics}
+@incollection{grenoble_2011,
+  address   = {Cambridge},
+  author    = {Lenore A. Grenoble},
+  booktitle = {The Cambridge Handbook of Endangered Languages},
+  editor    = {Peter K. Austin and Julia Sallabank},
+  pages     = {27-45},
+  publisher = {Cambridge University Press},
+  title     = {Language Ecology and Endangerment},
+  year      = {2011}
 }
 
 @inbook{wals-141,
@@ -113,7 +116,7 @@
 }
 
 @inproceedings{zagalsky2015,
-  title={The emergence of GitHub as a collaborative platform for education},
+  title={The emergence of {GitHub} as a collaborative platform for education},
   author={Zagalsky, Alexey and Feliciano, Joseph and Storey, Margaret-Anne and Zhao, Yiyun and Wang, Weiliang},
   booktitle={Proceedings of the 18th ACM Conference on Computer Supported Cooperative Work \& Social Computing},
   pages={1906--1917},
@@ -151,7 +154,7 @@
 }
 
 @book{MacKenzie-1980,
-  title={Towards a Dialectology of Cree-Montagnais-Naskapi},
+  title={Towards a Dialectology of {Cree-Montagnais-Naskapi}},
   author={MacKenzie, M.E.},
   publisher={University of Toronto},
   url={https://books.google.ca/books?id=u\_MBPwAACAAJ},
