Cleaned up abstract
Closes #22

--- a/abstract.tex
+++ b/abstract.tex
@@ -4,6 +4,8 @@
 
   % Please put \noindent before each paragraph of the abstract!
 
-  \noindent Of the roughly seven thousand languages currently spoken, less than fifty have a significant digital presence. In order for a language to be used digitally and to survive, it needs to have computational resources: orthographies, dictionaries, grammars, spell checkers, parsers, and more. Instead of depending on closed-source code from large providers, researchers and communities can leverage open source code to bootstrap digital language development. In this thesis, I discuss the state of the field for low-resource languages, what open source code is and how this methodology can help languages. I provide two cases studies, looking in detail at Gaelic and Naskapi, and I describe a database I have developed (with help from others) of open source code serving these languages. Looking to the future, I discuss steps for helping save languages from virtual extinction.
+  \noindent Of the roughly seven thousand languages currently spoken, less than fifty have a significant digital presence. In order for a language to be used digitally and to survive in the long term, it's speakers may need to develop computational resources: orthographies, dictionaries, grammars, spell checkers, parsers, and more. Instead of depending on closed source code from large providers, researchers and communities can leverage open source code as a means of bootstraping digital language development. In this thesis, I discuss the state of the field for low-resource languages, what open source code is and how this methodology can help languages. I provide two cases studies, looking in detail at Gaelic and Naskapi, and I describe a database I have developed for open source code serving these languages. Looking to the future, I discuss steps for helping save languages from virtual extinction.
+  
+  \noindent My specific contributions in this thesis include not only the first published analysis of open source code specifically regarding endangered languages, and an exposition of the only database of open source resources, but also the first independent fieldwork with Naskapi that pertains to its digital presence. I also outline how researchers and developers can change their processes to help make their work more effectual in the long term.
 
 \end{abstract}
