--- a/thesis.tex
+++ b/thesis.tex
@@ -152,6 +152,8 @@
 % \bibliographystyle{./LREC2016/lrec2016}
 % \bibliography{references}
 
+% TODO Add a conflicts section?
+
 \bibliographystyle{apalike}
 \bibliography{references}
 
