Fixed year and macron and name

--- a/references.bib
+++ b/references.bib
@@ -12,12 +12,12 @@
 }
 
 @inproceedings{CCURL,
-	Author    = {Littauer, Richard and Paterson, Hugh},
+	Author    = {Littauer, Richard and Paterson III, Hugh},
 	Title     = {Open Source Code Serving Endangered Languages},
 	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
   Editor    = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
-  Address   = {Portoroz, Slovenia},
-	Year      = {2012}
+  Address   = {Portoro\v{z}, Slovenia},
+	Year      = {2016}
 }
 
 @incollection{chiarcos2013building,
