--- a/3-open-source.tex
+++ b/3-open-source.tex
@@ -66,6 +66,8 @@ Here, I will include a short section on how the open source world works. In part
 
 Universities and institutions have short timelines and are largely dependent on specific, allocated, and thus finite funding. Here, I'll answer the question: What other models are there for data storage? What concerns are there?
 
+% Alexis: there are also issues around evolution of code -- what about open source code that does great things but requires, e.g., java from 10 years ago?
+
 \subsection{Data and privacy}
 
 Here, I'll talk specifically about data rights and privacy, in regards to whether it makes sense to decouple code from data, especially in cases of low resource languages, where sparse data may be naturally enriched with annotation schemas and hard to separate out from the tools being used. In such cases, how do we as a community, researchers as providers, and developers as consumers, deal with licensing, privacy, and proprietary data? Does it make sense to provide links to code that can be used institutionally or commercially without also allowing for things like royalties for usage, or proper licensing for data? Bound up in this are also ethical concerns - well studied in theoretical field linguistics - about the language users themselves not wishing for their data to be used in certain ways.
@@ -111,7 +113,7 @@ Here, I'll talk specifically about data rights and privacy, in regards to whethe
 
 \subsection{Legal rights and liability}
 
-Here, I'll talk about specific licenses used in Open Source, and how they apply to code. I'll try to kepe this brief.
+Here, I'll talk about specific licenses used in Open Source, and how they apply to code. I'll try to keep this brief.
 
 I'll also talk about liability wavers - a separate issue from licenses. I'll talk about the standard liability wavers used with the MIT license, and other issues that might arise for language code specifically.
 
