--- a/thesis.tex
+++ b/thesis.tex
@@ -61,7 +61,7 @@
 \end{titlepage}
 \newpage
 
-\include{abstract}
+\include{0-abstract}
 
 \newpage
 
@@ -77,7 +77,7 @@
 
 \noindent\textbf{Acknowledgements}
 
-\noindent Jonathan Poitz provided formatting files, but did not advise on the content. This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2014 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper.
+\noindent Jonathan Poitz provided formatting files, but did not advise on the content. This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper.
 
 \vspace{1cm}
 
@@ -125,13 +125,22 @@
 % \subsection{solutions}
 % A database for open source code
 % Describe github.com/RichardLitt/endangered-languages
-\include{6-case-studies}
+\include{5-case-studies}
 % \subsection{Gaelic}
 % \subsection{Naskapi}
-% % \subsection{Kilangi} Another possible usecase?
-\include{7-conclusion}
-% \section{future-work}
-% \section{conclusion}
+% \subsection{Kilangi} Another possible usecase?
+\include{6-methods}
+% \subsection{Choosing a license}
+% \subsection{Choosing repositories}
+% \subsection{Sharing code without a platform}
+\include{7-discussion}
+% \subsection{Why isn't more code open?}
+% \subsection{How does open source demonstrably help?}
+\include{8-future-work}
+% \subsection{Beyond Wikipedia and Ethnologue}
+% \subsection{An Open Data Repository}
+% \subsection{Storage on a p2p network}
+\include{9-conclusion}
 
 % % \input{background}
 % % \input{definition}
