--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -7,7 +7,7 @@ In this section, I will outline the state of endangered languages. %Specifically
 
 Before going further, it makes sense to define what the terms \emph{endangered}, \emph{minority}, \emph{low-} and \emph{under-resourced}, and other terms like \emph{threatened} languages mean. Ultimately, they refer as a whole to languages which are in peril in some way. However, there have slightly different meanings in different contexts, and according to the scale and metric applied.
 
-In this section, I will define these terms: endangered, minority, low-resource, under-resourced, threatened, moribund, dormant, extinct, computer (such as JavaScript), revitalized, and constructed languages. This will help inform why I've chosen to focus on \emph{low-resource} languages (LRLs), and specifically low-resource natural languages with living populations.
+In this section, I will define these terms: endangered, minority, low-resource, under-resourced, threatened, moribund, dormant, extinct, computer (such as JavaScript), revitalised, and constructed languages. This will help inform why I've chosen to focus on \emph{low-resource} languages (LRLs), and specifically low-resource natural languages with living populations.
 
 % \subsubsection{Endangered Languages}
 %
@@ -26,16 +26,20 @@ In this section, I will define these terms: endangered, minority, low-resource, 
 % \subsubsection{Other terms}
 %
 % - Computer languages
-% - Constructed langauges
+% - Constructed languages
 % - Extinct languages
 % - Moribund languages
 % - Sleeping languages
 
 \subsection{Metrics}
 
-There are various metrics would can be used to assess language health. In this section, I'll explain these metrics in detail, focusing on the UNESCO, GIDS, EGIDS, and LEI measuremtns, as suggested by \citet{yang2017toward}.
+There are various metrics would can be used to assess language health. In this section, I'll explain these metrics in detail, focusing on the UNESCO, GIDS, EGIDS, and LEI measurements, as suggested by \citet{yang2017toward}.
 
-% > A variety of metrics have been proposed for assessing a language?s degree of endangerment ? the UNESCO system (2003), the Graded Intergenerational Disruption Scale (GIDS; Fishman 1991), the Extended Graded Intergenerational Dis- ruption Scale (E-GIDS; Lewis & Simons 2010), and the Language Endangerment Index (LEI; Lee & Van Way 2016), among others. - yang_ogrady.pdf
+% TODO Alexis: would be interesting to also discuss how these metrics might apply for the set of languages you're interested in (as defined in 2.1)
+
+% Alexis: yes, in fact I think it's rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it's a very interesting question)
+
+% > A variety of metrics have been proposed for assessing a language?s degree of endangerment ? the UNESCO system (2003), the Graded Intergenerational Disruption Scale (GIDS; Fishman 1991), the Extended Graded Intergenerational Disruption Scale (E-GIDS; Lewis & Simons 2010), and the Language Endangerment Index (LEI; Lee & Van Way 2016), among others. - yang_ogrady.pdf
 
 % Describe UNESCO
 % Describe GIDS
@@ -45,12 +49,12 @@ There are various metrics would can be used to assess language health. In this s
 
 \subsection{Digital presence}
 
-In this section, I am going to explain what digital presence is. This is more than just defining language endangerement - instead, this is about how do we quantify a language's existence digitally, either on the web or offline in archives.
+In this section, I am going to explain what digital presence is. This is more than just defining language endangerment - instead, this is about how do we quantify a language's existence digitally, either on the web or offline in archives.
 
 Few of the metrics above take into account the level of digital literacy for a language. The possibility for a language to digitally ascend has been held up as a key component of judging a language's vitality by \citet{kornai2013digital}. %Reword wow
 % Describe Kornai
 
-I'll describe his assesment here, and explain why an alternative assessment would also be good. For instance, Wikipedia is, in my opinion, not a good judge of a language's health, as it is a closed ecosystem with diminishing returns for users who are bilingual.
+I'll describe his assessment here, and explain why an alternative assessment would also be good. For instance, Wikipedia is, in my opinion, not a good judge of a language's health, as it is a closed ecosystem with diminishing returns for users who are bilingual.
 
 % Talk about BLARK
 % Describe a new metric using BLARK to judge the rate of a language's life
@@ -84,9 +88,9 @@ I'll describe his assesment here, and explain why an alternative assessment woul
 %
 % To get a better idea of hose these metrics can be implemented, we can look at several different languages and how they use code to further language development.
 
-% A language's digital presence is defined by: its ability to have tools which are easily accessible to users of the language, applications build on top of that tooling, large amounts of mono- and bilingual corpora, and an active amount of speakers (generally, in the millions). Generally, this also needs official backing in the form of an official status for a language, set at a national level. For instance, English is considered the {\it de facto} national language of United States, and the overwhelming majority of language users and computational software developed in the States is in English. In Europe, the EU mandates that citizens have the right to correspond with an EU institution (and receive a response back) in any of the 24 recognized official languages of the respective member states.\footnote{\href{https://europa.eu/european-union/topics/multilingualism\_en}{https://europa.eu/european-union/topics/multilingualism\_en}} This includes relatively small languages, such as Maltese, which has a significant web presence and tooling considering there are only just under half a million speakers. \footnote{\href{https://www.ethnologue.com/language/mlt}{https://www.ethnologue.com/language/mlt}} China is estimated to have more users of the internet than Japan, India, and the United States combined.\footnote{\href{http://chinapower.csis.org/web-connectedness/}{http://chinapower.csis.org/web-connectedness/}} But while the majority of these users will be speakers of Standard Mandarin, and not English; the operating systems and infrastructural backbone will still depend upon English-language originating software (although the user interface will be in Chinese).
+% A language's digital presence is defined by: its ability to have tools which are easily accessible to users of the language, applications build on top of that tooling, large amounts of mono- and bilingual corpora, and an active amount of speakers (generally, in the millions). Generally, this also needs official backing in the form of an official status for a language, set at a national level. For instance, English is considered the {\it de facto} national language of United States, and the overwhelming majority of language users and computational software developed in the States is in English. In Europe, the EU mandates that citizens have the right to correspond with an EU institution (and receive a response back) in any of the 24 recognised official languages of the respective member states.\footnote{\href{https://europa.eu/european-union/topics/multilingualism\_en}{https://europa.eu/european-union/topics/multilingualism\_en}} This includes relatively small languages, such as Maltese, which has a significant web presence and tooling considering there are only just under half a million speakers. \footnote{\href{https://www.ethnologue.com/language/mlt}{https://www.ethnologue.com/language/mlt}} China is estimated to have more users of the internet than Japan, India, and the United States combined.\footnote{\href{http://chinapower.csis.org/web-connectedness/}{http://chinapower.csis.org/web-connectedness/}} But while the majority of these users will be speakers of Standard Mandarin, and not English; the operating systems and infrastructural backbone will still depend upon English-language originating software (although the user interface will be in Chinese).
 %
-% Neither official status nor population size necessarily means that a language will have resources or a digital presence, however. Romansh, although it is an official, provincial language of Switzerland, does not enjoy the same privileges as French or German, as there are only 40,000 speakers.\footnote{\href{https://www.ethnologue.com/language/roh}{https://www.ethnologue.com/language/roh}} Min Dong, although it has over nine million speakers \footnote{\href{https://www.ethnologue.com/language/cdo}{https://www.ethnologue.com/language/cdo}}, does not afford the same privileges as Mandarin, as it is not the official language of China. It is also not true that a language needs to have a large government presence or access to military-grade technology to have digital resources - a notable example would be Haitain Creole, spoken by over ten million speakers in one of the world's poorest countries. After the 2010 earthquake, Google, Microsoft, and Carnegie Mellon collaborated to make a machine translation system, an overwhelmingly difficult achievement.\cite{Lewis:2011:CMD:2132960.2133030}
+% Neither official status nor population size necessarily means that a language will have resources or a digital presence, however. Romansh, although it is an official, provincial language of Switzerland, does not enjoy the same privileges as French or German, as there are only 40,000 speakers.\footnote{\href{https://www.ethnologue.com/language/roh}{https://www.ethnologue.com/language/roh}} Min Dong, although it has over nine million speakers \footnote{\href{https://www.ethnologue.com/language/cdo}{https://www.ethnologue.com/language/cdo}}, does not afford the same privileges as Mandarin, as it is not the official language of China. It is also not true that a language needs to have a large government presence or access to military-grade technology to have digital resources - a notable example would be Haitian Creole, spoken by over ten million speakers in one of the world's poorest countries. After the 2010 earthquake, Google, Microsoft, and Carnegie Mellon collaborated to make a machine translation system, an overwhelmingly difficult achievement.\cite{Lewis:2011:CMD:2132960.2133030}
 
 
 
@@ -99,6 +103,9 @@ In this section, I am going to briefly go into detail about what diversity means
 \subsection{Who makes resources for LRLs?}
 
 Here, I will explain briefly who makes language resources for these languages. I'll explain what I see as the main groups doing this work: professional translators, educators, missionaries (of multiple faiths, but mostly Christian), academics and native technologists. I'll explain each stakeholder and their canonical perspectives.
+
+% Alexis: what do you mean by "their canonical perspectives"? will this section address creation of digital resources only, or all resources? for that matter, what counts as a digital resource? does a collection of pdf scans of old books count? how about a pdf version of a text collection? etc....
+% I don't immediately see how this fits into the rest of the thesis. also look at relevant publications from Jeff Good - one in particular on the ecology of language documentation: http://www.acsu.buffalo.edu/~jcgood/publications.html
 
 % There are, of course, thousands of languages which could be used as examples of little to no resources, without recognition, speakers, or high literacy or computational use. The majority of languages do not have access to large financial bodies (whether military, governmental, or private) willing to invest in technical development, nor in developing large corpora which could be used to develop, bootstrap, and train computational tools. In such cases, any development work is normally undertaken by a few different groups; higher education departments or labs, native speakers with some digital ability, and missionaries, or, more usually, a combination of all three.
 %
